--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="nutanix-internship.html" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
+																<a href="nutanix-internship" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
 															</li>
 															<!-- End submenu -->
 															
