--- a/corsair-internship.html
+++ b/corsair-internship.html
@@ -225,7 +225,7 @@
 							<!-- Begin page header caption -->
 							<div class="ph-caption">
 								<div class="ph-categories ph-appear">
-									<div class="ph-category">Experience</div>
+									<div class="ph-category">Internship</div>
 								</div>
 
 								<h2 class="ph-caption-title ph-appear">Graphic Design Internship at Corsair</h2>
