--- a/corsair-internship.html
+++ b/corsair-internship.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<!-- Title -->
-		<title>Graphic Design Internship | Gaurang</title>
+		<title>Corsair | Gaurang</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
@@ -880,7 +880,6 @@
 										<div class="social-buttons">
 											<ul>
 												<li><a href="https://medium.com/@gauranggoel144" class="magnetic-item" target="_blank" rel="noopener">Me.</a></li>
-												<li><a href="https://www.youtube.com/@grittygeek" class="magnetic-item" target="_blank" rel="noopener">Yt.</a></li>
 												<li><a href="https://linkedin.com/in/gauranggoels" class="magnetic-item" target="_blank" rel="noopener">in.</a></li>
 												<li><a href="https://www.behance.net/gauranggoel" class="magnetic-item" target="_blank" rel="noopener">Be.</a></li>
 											</ul>
