--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="tt-header-col">
                             <!-- Begin logo -->
                             <div class="tt-logo" data-gradient="linear-gradient(to right, #F8C471, #1ABC9C, #F8C471)">
-                                <a href="index.html">
+                                <a href="./">
                                     <img src="assets/img/logo-light.png" class="tt-logo-light magnetic-item" alt="Logo" />
                                     <!-- logo light -->
                                     <img src="assets/img/logo-dark.png" class="tt-logo-dark magnetic-item" alt="Logo" />
@@ -104,7 +104,7 @@
 
 												<!-- Begin submenu (submenu master)-->
 												<li class="active">
-														<a href="index.html">Home</a>
+														<a href="./">Home</a>
 												</li>
 												<!-- End submenu (sub-master) -->
 
@@ -121,36 +121,36 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="nutanix-internship.html" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
+																<a href="./nutanix-internship" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
 															</li>
 															<!-- End submenu -->
 															
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="symbotic-internship.html" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
+																<a href="./symbotic-internship" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="coinio.html" class="tt-ol-submenu-link">Coinio</a>
+																	<a href="./coinio" class="tt-ol-submenu-link">Coinio</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="youtube-but-better.html" class="tt-ol-submenu-link">Youtube, but better!</a>
+																	<a href="./youtube-but-better" class="tt-ol-submenu-link">Youtube, but better!</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="carview.html" class="tt-ol-submenu-link">CarView</a>
+																	<a href="./carview" class="tt-ol-submenu-link">CarView</a>
 															</li>
 															<!-- End submenu -->
 
-															<li><a href="onroads.html">OnRoads</a></li>
-															<li><a href="concept-coc-website.html">Concept CoC Website</a></li>
+															<li><a href="./onroads">OnRoads</a></li>
+															<li><a href="./concept-coc-website">Concept CoC Website</a></li>
 
 														</ul>
 													</div>
@@ -168,17 +168,17 @@
 													<div class="tt-ol-submenu">
 														<ul class="tt-ol-submenu-list">
 
-															<li><a href="corsair-internship.html">Graphic Design Intern at Corsair</a></li>
-															<li><a href="logofolio.html">Logofolio</a></li>
-															<li><a href="headerfolio.html">Headerfolio</a></li>
-															<li><a href="profile-pictures.html">Profile Pictures</a></li>
+															<li><a href="./corsair-internship">Graphic Design Intern at Corsair</a></li>
+															<li><a href="./logofolio">Logofolio</a></li>
+															<li><a href="./headerfolio">Headerfolio</a></li>
+															<li><a href="./profile-pictures">Profile Pictures</a></li>
 
 														</ul> 
 													</div>
 												</li>
 												<!-- End submenu (sub-master) -->
 
-												<li><a href="about-me.html">About Me</a></li>
+												<li><a href="./about-me">About Me</a></li>
 
 											</ul>
 											<!-- End menu list -->
@@ -326,7 +326,7 @@
 											<div class="tt-grid-item isotope-item internship ux" data-gradient="linear-gradient(to right, #391F57, #703E91, #391F57)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="nutanix-internship.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./nutanix-internship" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -339,7 +339,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="nutanix-internship.html">UX Design Intern at Nutanix</a>
+																	<a href="./nutanix-internship">UX Design Intern at Nutanix</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Summer 2023</div>
@@ -356,7 +356,7 @@
 											<div class="tt-grid-item isotope-item internship ux" data-gradient="linear-gradient(to right, #5C9A26, #8BC34A, #5C9A26)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="symbotic-internship.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./symbotic-internship" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -369,7 +369,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="symbotic-internship.html">UX Design Intern at Symbotic</a>
+																	<a href="./symbotic-internship">UX Design Intern at Symbotic</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Spring 2023</div>
@@ -386,7 +386,7 @@
 											<div class="tt-grid-item isotope-item ux" data-gradient="linear-gradient(to right, #E0F3F8, #4285F4, #E0F3F8)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="coinio.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./coinio" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -399,7 +399,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="coinio.html">Coinio</a>
+																	<a href="./coinio">Coinio</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Product Design</div>
@@ -416,7 +416,7 @@
 											<div class="tt-grid-item isotope-item ux" data-gradient="linear-gradient(to right, #FF0000, #F44336, #E53935)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="youtube-but-better.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./youtube-but-better" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -429,7 +429,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="youtube-but-better.html">Youtube but better!</a>
+																	<a href="./youtube-but-better">Youtube but better!</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Product Redesign</div>
@@ -446,7 +446,7 @@
 											<div class="tt-grid-item isotope-item hack ux" data-gradient="linear-gradient(to right, #FF5733, #FF8C52, #FF5733)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="carview.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./carview" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -459,7 +459,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="carview.html">Carview</a>
+																	<a href="./carview">Carview</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Feature Design with AR</div>
@@ -476,7 +476,7 @@
 											<div class="tt-grid-item isotope-item internship" data-gradient="linear-gradient(to right, #FEE12B, #F9D423, #FEE12B)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="corsair-internship.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./corsair-internship" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -489,7 +489,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="corsair-internship.html">Graphic Design Intern at Corsair</a>
+																	<a href="./corsair-internship">Graphic Design Intern at Corsair</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Spring 2023</div>
@@ -506,7 +506,7 @@
 											<div class="tt-grid-item isotope-item hack ux" data-gradient="linear-gradient(to right, #E0F3E9, #0F9D58, #E0F3E9)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="onroads.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./onroads" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -519,7 +519,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="onroads.html">OnRoads</a>
+																	<a href="./onroads">OnRoads</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Product Design</div>
@@ -536,7 +536,7 @@
 											<div class="tt-grid-item isotope-item gfx" data-gradient="linear-gradient(to right, #F57E1D, #0055FF, #F57E1D)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="concept-coc-website.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./concept-coc-website" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -549,7 +549,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="concept-coc-website.html">Concept Clash of Clans Websute</a>
+																	<a href="./concept-coc-website">Concept Clash of Clans Websute</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">UI Design</div>
@@ -566,7 +566,7 @@
 											<div class="tt-grid-item isotope-item gfx" data-gradient="linear-gradient(to right, #770000, #B30000, #770000)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="logofolio.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./logofolio" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -579,7 +579,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="logofolio.html">Logofolio</a>
+																	<a href="./logofolio">Logofolio</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Graphic Design</div>
@@ -596,7 +596,7 @@
 											<div class="tt-grid-item isotope-item gfx" data-gradient="linear-gradient(to right, #3F2B36, #7E587E, #3F2B36)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="headerfolio.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./headerfolio" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -609,7 +609,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="headerfolio.html">Headerfolio</a>
+																	<a href="./headerfolio">Headerfolio</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Graphic Design</div>
@@ -626,7 +626,7 @@
 											<div class="tt-grid-item isotope-item gfx" data-gradient="linear-gradient(to right, #045F67, #033D44, #045F67)">
 												<div class="ttgr-item-inner">
 													<div class="portfolio-grid-item">
-														<a href="profile-pictures.html" class="pgi-image-wrap" data-cursor="View<br>Case Study">
+														<a href="./profile-pictures" class="pgi-image-wrap" data-cursor="View<br>Case Study">
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
 																	<figure class="pgi-image ttgr-height">
@@ -639,7 +639,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="profile-pictures.html">Profile Pictures</a>
+																	<a href="./profile-pictures">Profile Pictures</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Graphic Design</div>
