--- a/symbotic-internship.html
+++ b/symbotic-internship.html
@@ -226,7 +226,7 @@
 							<!-- Begin page header caption -->
 							<div class="ph-caption">
 								<div class="ph-categories ph-appear">
-									<div class="ph-category">Experience</div>
+									<div class="ph-category">Internship</div>
 								</div>
 
 								<h2 class="ph-caption-title ph-appear">UX Design Internship at Symbotic</h2>
