--- a/about-me.html
+++ b/about-me.html
@@ -65,7 +65,7 @@
                         <div class="tt-header-col">
                             <!-- Begin logo -->
                             <div class="tt-logo" data-gradient="linear-gradient(to right, #F8C471, #1ABC9C, #F8C471)">
-                                <a href="index.html">
+                                <a href="./">
                                     <img src="assets/img/logo-light.png" class="tt-logo-light magnetic-item" alt="Logo" />
                                     <!-- logo light -->
                                     <img src="assets/img/logo-dark.png" class="tt-logo-dark magnetic-item" alt="Logo" />
@@ -96,7 +96,7 @@
                                             <!-- Begin menu list -->
                                             <ul class="tt-ol-menu-list">
                                                 <!-- Begin submenu (submenu master)-->
-                                                <li><a href="index.html">Home</a></li>
+                                                <li><a href="./">Home</a></li>
                                                 <!-- End submenu (sub-master) -->
 
                                                 <!-- Begin submenu (submenu master)-->
@@ -112,19 +112,19 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="nutanix-internship.html" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
+																<a href="./nutanix-internship" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
 															</li>
 															<!-- End submenu -->
 															
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="symbotic-internship.html" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
+																<a href="./symbotic-internship" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="coinio.html" class="tt-ol-submenu-link">Coinio</a>
+																	<a href="./coinio" class="tt-ol-submenu-link">Coinio</a>
 															</li>
 															<!-- End submenu -->
 
@@ -136,12 +136,12 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="carview.html" class="tt-ol-submenu-link">CarView</a>
+																	<a href="./carview" class="tt-ol-submenu-link">CarView</a>
 															</li>
 															<!-- End submenu -->
 
-															<li><a href="onroads.html">OnRoads</a></li>
-															<li><a href="concept-coc-website.html">Concept CoC Website</a></li>
+															<li><a href="./onroads">OnRoads</a></li>
+															<li><a href="./concept-coc-website">Concept CoC Website</a></li>
 
 														</ul>
 													</div>
@@ -159,17 +159,17 @@
 													<div class="tt-ol-submenu">
 														<ul class="tt-ol-submenu-list">
 
-															<li><a href="corsair-internship.html">Graphic Design Intern at Corsair</a></li>
-															<li><a href="logofolio.html">Logofolio</a></li>
-															<li><a href="headerfolio.html">Headerfolio</a></li>
-															<li><a href="profile-pictures.html">Profile Pictures</a></li>
+															<li><a href="./corsair-internship">Graphic Design Intern at Corsair</a></li>
+															<li><a href="./logofolio">Logofolio</a></li>
+															<li><a href="./headerfolio">Headerfolio</a></li>
+															<li><a href="./profile-pictures">Profile Pictures</a></li>
 
 														</ul> 
 													</div>
 												</li>
 												<!-- End submenu (sub-master) -->
 
-												<li class="active"><a href="about-me.html">About Me</a></li>
+												<li class="active"><a href="./about-me">About Me</a></li>
                                             </ul>
                                             <!-- End menu list -->
                                         </div>
@@ -279,7 +279,7 @@
                             <div class="tt-section-inner tt-wrap">
                                 <!-- Begin page nav -->
                                 <div class="tt-page-nav tt-pn-scroll" data-gradient="linear-gradient(to right, #3498DB, #F7DC6F, #3498DB)">
-                                    <a href="index.html#page-content" class="tt-pn-link anim-fadeinup">
+                                    <a href="./#page-content" class="tt-pn-link anim-fadeinup">
                                         <div class="tt-pn-title">Portfolio</div>
                                         <div class="tt-pn-hover-title">Portfolio</div>
                                     </a>
