--- a/corsair-internship.html
+++ b/corsair-internship.html
@@ -74,7 +74,7 @@
 
 							<!-- Begin logo -->
 							<div class="tt-logo" data-gradient="linear-gradient(to right, #F8C471, #1ABC9C, #F8C471)"> 
-								<a href="index.html">
+								<a href="./">
 									<img src="assets/img/logo-light.png" class="tt-logo-light magnetic-item" alt="Logo"> <!-- logo light -->
 									<img src="assets/img/logo-dark.png" class="tt-logo-dark magnetic-item" alt="Logo"> <!-- logo dark -->
 								</a>
@@ -110,7 +110,7 @@
 
 												<!-- Begin submenu (submenu master)-->
 												<li>
-														<a href="index.html">Home</a>
+														<a href="./">Home</a>
 												</li>
 												<!-- End submenu (sub-master) -->
 
@@ -127,19 +127,19 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="nutanix-internship.html" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
+																<a href="./nutanix-internship" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
 															</li>
 															<!-- End submenu -->
 															
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="symbotic-internship.html" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
+																<a href="./symbotic-internship" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="coinio.html" class="tt-ol-submenu-link">Coinio</a>
+																	<a href="./coinio" class="tt-ol-submenu-link">Coinio</a>
 															</li>
 															<!-- End submenu -->
 
@@ -151,12 +151,12 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="carview.html" class="tt-ol-submenu-link">CarView</a>
+																	<a href="./carview" class="tt-ol-submenu-link">CarView</a>
 															</li>
 															<!-- End submenu -->
 
-															<li><a href="onroads.html">OnRoads</a></li>
-															<li><a href="concept-coc-website.html">Concept CoC Website</a></li>
+															<li><a href="./onroads">OnRoads</a></li>
+															<li><a href="./concept-coc-website">Concept CoC Website</a></li>
 
 														</ul>
 													</div>
@@ -174,17 +174,17 @@
 													<div class="tt-ol-submenu">
 														<ul class="tt-ol-submenu-list">
 
-															<li class="active"><a href="corsair-internship.html">Graphic Design Intern at Corsair</a></li>
-															<li><a href="logofolio.html">Logofolio</a></li>
-															<li><a href="headerfolio.html">Headerfolio</a></li>
-															<li><a href="profile-pictures.html">Profile Pictures</a></li>
+															<li class="active"><a href="./corsair-internship">Graphic Design Intern at Corsair</a></li>
+															<li><a href="./logofolio">Logofolio</a></li>
+															<li><a href="./headerfolio">Headerfolio</a></li>
+															<li><a href="./profile-pictures">Profile Pictures</a></li>
 
 														</ul> 
 													</div>
 												</li>
 												<!-- End submenu (sub-master) -->
 
-												<li><a href="about-me.html">About Me</a></li>
+												<li><a href="./about-me">About Me</a></li>
 
 											</ul>
 											<!-- End menu list -->
@@ -822,7 +822,7 @@
 
 								<!-- Begin page nav -->
 								<div class="tt-page-nav tt-pn-scroll" data-gradient="linear-gradient(to right, #E0F3E9, #0F9D58, #E0F3E9)">
-									<a href="onroads.html" class="tt-pn-link anim-fadeinup">
+									<a href="./onroads" class="tt-pn-link anim-fadeinup">
 										<div class="tt-pn-title">Next Project</div>
 										<div class="tt-pn-hover-title">OnRoads</div>
 									</a>
