--- a/headerfolio.html
+++ b/headerfolio.html
@@ -128,19 +128,19 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="nutanix-internship.html" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
+																<a href="./nutanix-internship" class="tt-ol-submenu-link">UX Design Intern at Nutanix</a>
 															</li>
 															<!-- End submenu -->
 															
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																<a href="symbotic-internship.html" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
+																<a href="./symbotic-internship" class="tt-ol-submenu-link">UX Design Intern at Symbotic</a>
 															</li>
 															<!-- End submenu -->
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="coinio.html" class="tt-ol-submenu-link">Coinio</a>
+																	<a href="./coinio" class="tt-ol-submenu-link">Coinio</a>
 															</li>
 															<!-- End submenu -->
 
@@ -152,12 +152,12 @@
 
 															<!-- Begin submenu -->
 															<li class="tt-ol-submenu-wrap">
-																	<a href="carview.html" class="tt-ol-submenu-link">CarView</a>
+																	<a href="./carview" class="tt-ol-submenu-link">CarView</a>
 															</li>
 															<!-- End submenu -->
 
-															<li><a href="onroads.html">OnRoads</a></li>
-															<li><a href="concept-coc-website.html">Concept CoC Website</a></li>
+															<li><a href="./onroads">OnRoads</a></li>
+															<li><a href="./concept-coc-website">Concept CoC Website</a></li>
 
 														</ul>
 													</div>
@@ -175,17 +175,17 @@
 													<div class="tt-ol-submenu">
 														<ul class="tt-ol-submenu-list">
 
-															<li><a href="corsair-internship.html">Graphic Design Intern at Corsair</a></li>
-															<li><a href="logofolio.html">Logofolio</a></li>
-															<li class="active"><a href="headerfolio.html">Headerfolio</a></li>
-															<li><a href="profile-pictures.html">Profile Pictures</a></li>
+															<li><a href="./corsair-internship">Graphic Design Intern at Corsair</a></li>
+															<li><a href="./logofolio">Logofolio</a></li>
+															<li class="active"><a href="./headerfolio">Headerfolio</a></li>
+															<li><a href="./profile-pictures">Profile Pictures</a></li>
 
 														</ul> 
 													</div>
 												</li>
 												<!-- End submenu (sub-master) -->
 
-												<li><a href="about-me.html">About Me</a></li>
+												<li><a href="./about-me">About Me</a></li>
 
 											</ul>
 											<!-- End menu list -->
@@ -580,7 +580,7 @@
 
 								<!-- Begin page nav -->
 								<div class="tt-page-nav tt-pn-scroll" data-gradient="linear-gradient(to right, #045F67, #033D44, #045F67)">
-									<a href="profile-pictures.html" class="tt-pn-link anim-fadeinup">
+									<a href="./profile-pictures" class="tt-pn-link anim-fadeinup">
 										<div class="tt-pn-title">Next Project</div>
 										<div class="tt-pn-hover-title">Profile Pictures</div>
 									</a>
