--- a/carview.html
+++ b/carview.html
@@ -968,5 +968,6 @@
         <script src="assets/js/textswitcher.js"></script>
         <script src="assets/js/theme.js"></script>
         <script src="assets/js/cursor.js"></script>
+		<script src="assets/js/image.js"></script>
     </body>
 </html>
