--- a/headerfolio.html
+++ b/headerfolio.html
@@ -667,6 +667,7 @@
         <script src="assets/js/textswitcher.js"></script>
         <script src="assets/js/theme.js"></script>
         <script src="assets/js/cursor.js"></script>
+		<script src="assets/js/image.js"></script>
 	</body>
 
 </html>
