--- a/nutanix-internship.html
+++ b/nutanix-internship.html
@@ -418,6 +418,7 @@
 		<script src="assets/vendor/jquery.mousewheel.min.js"></script>
 		<script src="assets/js/theme.js"></script>
 		<script src="assets/js/cursor.js"></script>
+		<script src="assets/js/image.js"></script>
 
 	</body>
 
