--- a/onroads.html
+++ b/onroads.html
@@ -436,7 +436,7 @@
 		<script src="assets/vendor/jquery.mousewheel.min.js"></script>
 		<script src="assets/js/theme.js"></script>
 		<script src="assets/js/cursor.js"></script>
-
+		<script src="assets/js/image.js"></script>
 
 
 	</body>
