--- a/profile-pictures.html
+++ b/profile-pictures.html
@@ -1127,6 +1127,7 @@
         <script src="assets/js/textswitcher.js"></script>
         <script src="assets/js/theme.js"></script>
         <script src="assets/js/cursor.js"></script>
+		<script src="assets/js/image.js"></script>
 	</body>
 
 </html>
