--- a/youtube-but-better.html
+++ b/youtube-but-better.html
@@ -1048,6 +1048,7 @@
 		<script src="assets/vendor/jquery.mousewheel.min.js"></script>
 		<script src="assets/js/theme.js"></script>
 		<script src="assets/js/cursor.js"></script>
+		<script src="assets/js/image.js"></script>
 	</body>
 
 </html>
